@@ -8,13 +8,16 @@
                                        ResourcesPlugin
                                        IWorkspaceRunnable
                                        IWorkspace
-                                       IWorkspaceRoot]
+                                       IWorkspaceRoot
+                                       WorkspaceJob]
            [org.eclipse.core.runtime IPath 
                                      Path
                                      Platform
                                      Plugin
                                      FileLocator
-                                     IAdaptable]
+                                     IAdaptable
+                                     IProgressMonitor
+                                     Status]
            [org.eclipse.jdt.core IJavaProject]
            [org.eclipse.debug.core ILaunchConfiguration ILaunch]
            [org.eclipse.ui.handlers HandlerUtil]
@@ -438,60 +441,17 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Long-running tasks, background tasks, Workspace Resources related tasks
 
-; From http://wiki.eclipse.org/FAQ_What_are_IWorkspaceRunnable%2C_IRunnableWithProgress%2C_and_WorkspaceModifyOperation%3F
-; FAQ What are IWorkspaceRunnable, IRunnableWithProgress, and WorkspaceModifyOperation?
-; IWorkspaceRunnable is a mechanism for batching a set of changes to the workspace 
-; so that change notification and autobuild are deferred until the entire batch completes. 
-; IRunnableWithProgress is a mechanism for batching a set of changes to be run outside the UI thread.
-; You often need to do both of these at once: Make multiple changes to the workspace outside the UI thread. 
-; Wrapping one of these mechanisms inside the other would do the trick, but the resulting code is cumbersome,
-; and it is awkward to communicate arguments, results, and exceptions between the caller and the operation to be run.
-;
-; The solution is to use WorkspaceModifyOperation. This class rolls the two mechanisms together 
-; by implementing IRunnableWithProgress and performing the work within a nested IWorkspaceRunnable.
-; To use it, simply create a subclass that implements the abstract method execute, 
-; and pass an instance of this subclass to IRunnableContext.run to perform the work. 
-; If you already have an instance of IRunnableWithProgress on hand, it can be passed 
-; to the constructor of the special subclass WorkspaceModifyDelegatingOperation 
-; to create a new IRunnableWithProgress that performs workspace batching for you. 
-
-; See also http://wiki.eclipse.org/FAQ_How_do_I_prevent_builds_between_multiple_changes_to_the_workspace%3F
-
-; From http://wiki.eclipse.org/FAQ_Actions%2C_commands%2C_operations%2C_jobs:_What_does_it_all_mean%3F 
-; Operations
-; Operations aren’t an official part of the workbench API, but the term tends to 
-; be used for a long-running unit of behavior. Any work that might take a second
-; or more should really be inside an operation. The official designation for operations
-; in the API is IRunnableWithProgress, but the term operation tends to be used in its
-; place because it is easier to say and remember. Operations are executed within an IRunnableContext.
-; The context manages the execution of the operation in a non-UI thread so that the UI stays alive and painting.
-; The context provides progress feedback to the user and support for cancellation.
-; 
-; Jobs
 ; Jobs, introduced in Eclipse 3.0, are operations that run in the background. 
 ; The user is typically prevented from doing anything while an operation is running 
 ; but is free to continue working when a job is running. Operations and jobs belong 
 ; together, but jobs needed to live at a lower level in the plug-in architecture 
 ; to make them usable by non-UI components. 
 
-; operation : long-running action which will be executed outside the UI thread to not make it hang
 ; job : operation that run in the background. Jobs are usable by non-UI components
 ; Job: see also http://wiki.eclipse.org/FAQ_Does_the_platform_have_support_for_concurrency%3F
 ; jobs can report progress via instances of the UI-agnostic IProgressMonitor interface
 
 ; Article on jobs treating each and every aspect in depth: http://www.eclipse.org/articles/Article-Concurrency/jobs-api.html
-
-; CCW modelisation:
-;
-; Operation
-; =========
-; An operation is a function reporting progress via an IProgressMonitor
-; (fn [progress-monitor] ....)
-; The concept of operation is independent from the thread it may be running on
-; (UI thread, background thread), is independent from the fact that the user actions
-; may be blocked (modal, busy indicator then modal) or not (not modal, many flavors from unware (system), aware (closeable popup), informed (status line progress bar))
-; and is independent from the fact that concurrency goodies (IRules, resource rules)
-; have been declared or not to the Eclipse concurrency framework
 
 (defprotocol RunnableWithProgress
   (runnable-with-progress [this] "Returns an instance of IRunnableWithProgress"))
@@ -514,30 +474,6 @@
           (catch Exception e
             (throw (java.lang.reflect.InvocationTargetException. e))))))))
 
-(defn runnable-with-progress-in-workspace
-  "Takes an operation, a Scheduling rule, and returns an instance of WorkspaceModifyDelegationOperation"
-  [operation rule]
-  (WorkspaceModifyDelegatingOperation. 
-    (runnable-with-progress operation)
-    rule))
-
-(defn run-in-background
-  "Uses Eclipse's IProgressService API to run tasks in the background and have
-   them play nicely with other background taks, jobs, etc.
-   operation is the function to be executed, taking a progress-monitor as argument.
-   Must switch to the UI Thread if not already within it before calling the
-   operation."
-  [operation]
-  (DisplayUtil/asyncExec
-    #(let [ps (.getProgressService (workbench))]
-       (.busyCursorWhile ps 
-         (runnable-with-progress operation)))))
-
-#_(defn run-with-progress-in-workspace
-  "Will run with IProgressService API. Currently busyCursorWhile is hardcoded"
-  [operation rule]
-  
-  )
 
 (defn workspace-runnable 
   "operation is a function which takes a progress monitor and will be executed inside
@@ -556,6 +492,15 @@
     (-> (ResourcesPlugin/getWorkspace)
       (.run runnable rule avoid-update progress-monitor))))
 
+(defn workspace-job
+  "Create a WorkspaceJob with name, and delegate runInWorkspace to (f monitor).
+    Takes care of returning (Status/OK_STATUS) in case of success"
+  [name f]
+  (proxy [WorkspaceJob] [name]
+    (runInWorkspace [^IProgressMonitor monitor]
+      (if-let [s (f monitor)]
+        s
+        (Status/OK_STATUS)))))
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Event Handler utilities
